--- a/views/docs.html
+++ b/views/docs.html
@@ -9,7 +9,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
           rel="stylesheet">
      <link rel="stylesheet" href="https://erzacanz.github.io/simple/static/css/index.css">
-     <title>KhrlMstfa</title>
+     <title>Akira ID</title>
      <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
 </head>
 
@@ -25,7 +25,7 @@
           </div>
      </div> -->
      <div class="modal">
-          <img src="https://i.ibb.co/GCrVJPq/f7e31f84-d1a0-4977-8d65-2018ba5f0eeb.jpg" alt="img">
+          <img src="https://i.ibb.co/YcdmpsW/025310328879b5a3fce37afb65ab04feb660af00-s2-n2-y2.jpg" alt="img">
           <div class="close"></div>
      </div>
 
@@ -35,8 +35,8 @@
                <div class="sidebar" id="sidebar">
                     <ul>
                          
-                         <li><a class="active" href="https://github.com/RullDev">My Bot</a></li>
-                         <li><a class="active" href="https://bit.ly/3eggcxd">Website</a></li>
+                         <li><a class="active" href="https://github.com/AkiRaID">My Bot</a></li>
+                         <li><a class="active" href="https://linktr.ee/akiraofficialid">Website</a></li>
                          <li><a class="active" href="/docs">Rest Api</a></li>
 
                         
@@ -48,7 +48,7 @@
                               <div class="center"></div>
                          </div>
                     </label>
-                    <a href="mailto: contact.khoirulmustofa767@gmail.com" class="mail">
+                    <a href="mailto: contact.akiraid27@gmail.com" class="mail">
                          <i class="far fa-envelope"></i>
                     </a>
                     <div class="main">
@@ -57,8 +57,8 @@
                                    <i class="fas fa-camera fa-2x"></i>
                               </div>
                          </div>
-                         <h3 class="name">KhrlMstfa</h3>
-                         <h3 class="sub-name">@khoirul36_</h3>
+                         <h3 class="name">Akira ID</h3>
+                         <h3 class="sub-name">@akiraid27</h3>
                     </div>
                </div>
 
@@ -66,16 +66,16 @@
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">hi world introduce the name KhrlMstfa my hobby is watching anime and dialogue in Japanese and I also don't have any skills I can only MANGAN,TURU,NGODING,NGEMIM,REPEAT.</p>
+                              <p class="text">Hi world introduce the real name Reihan my hobby is watching anime and playing games and I also don't have any skills I can only School, Upload Content, Playing Games, Sleep, and REPEAT.</p>
                          </div>
                          <div class="icons-container">
-                              <a href="https://github.com/RullDev" class="icon">
+                              <a href="https://github.com/AkiRaID" class="icon">
                                    <i class="fab fa-github"></i>
                               </a>
-                              <a href="https://instagram.com/khoirul36_" class="icon">
+                              <a href="https://instagram.com/muhammadreihansaputra27" class="icon">
                                    <i class="fab fa-instagram"></i>
                               </a>
-                              <a href="https://wa.me/0" class="icon">
+                              <a href="https://wa.me/6282158549899" class="icon">
                                    <i class="fab fa-whatsapp"></i>
                               </a>
                               
@@ -83,7 +83,7 @@
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="https://github.com/RullDev" class="follow">Follow</a>
+                                   <a href="https://github.com/AkiRaID" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
                                    <a href="/contact" class="share">Contact</a>
